Added message while loading 3D model

--- a/src/app/chair/chair.component.html
+++ b/src/app/chair/chair.component.html
@@ -3,6 +3,7 @@
   <!-- The loading element overlays all else until the model is loaded, at which point we remove this element from the DOM -->
   <div class="loading" id="js-loader">
     <div class="loader"></div>
+    <h2>Loading 3D model, please wait ...</h2>
   </div>
 
   <!-- These toggle the the different parts of the chair that can be edited, note data-option is the key that links to the name of the part in the 3D file -->
